# slamify

./: .gitignore  README.md
src/imu_msgs/: package.xml
src/slamify/: CMakeLists.txt  package.xml
src/slamify/description/: camera.xacro  depth_camera.xacro  gazebo_control.xacro  imu.xacro  inertial_macros.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
src/slamify/launch/: robot_spawn_launch.py  rsp.launch.py
src/slamify/src/: raw_imu_parsing.cpp  test.py
src/slamify/worlds/: circle-room.world  m-shape-circle-room.world  maze.world  square.world  triangle.world
